New in version 1.0.1 (??? 2009)
 * Fix crash when generating scheme frames for opencog.

New in version 1.0.0 (17 June 2009)
 * Add "ant help" and "ant javadoc" build targets
 * Upgrade to opennlp-1.4.3, maxent-2.5.2
 * Move the old, deprecated parser API to parser-old.
 * Update for link-grammar version 4.5.7
 * Fix _amod, _predadj, _advmod order in the frame rules.
 * Fix lemma form of verb 's ("That's what the man said")
 * Fix handling of word subscripts, when subscripts are multi-letter.
 * Fix OpenCog output for frame elements.
 * Improve POS tagging coverage.
 * Strip the [?], [!] and [~] suffixes from link-grammar-guessed words.
 * Add refined sentence history support for anaphora resolution.
 * Export anaphoric reference output to OpenCog.

New in version 0.99.0 (May 2009)
 * Fix/reverse the usage of the head-word in certain relations.
   Please note that this is a MAJOR INCOMPATIBILITY from previous
	versions! Please note that the frame relations are BROKEN as
	a result of this change; they will be fixed later!

New in version 0.98.4 (March 2009)
 * Fix build break in optional OWL-format output.
 * Delete obsolete interface class RelexInfo.
 * Add getPOS() method to ParsedSentence.
 * Split relex-semantic-algs.txt into two files.
 * Correctly identify time-related adjectives.
 * Fix the way that the version number is identified during build.
 * Tag more pronouns as such.
 * Work around crash when input contains utf8-encoded Japanese/Chinese.
 * Add opencog-server.sh for generating OpenCog output.

New in version 0.98.3 (February 2009)
 * Fix bug, where the OpenNLP doc splitter was not being found.
 * Clarify installation instructions.
 * Tag certain date expressions as such.
 * Collect sentence statistics in the CFF output parser.
 * Fix parsing bug introduced in version 0.10.1

New in version 0.98.2 (January 2009)
 * Fix error in optional GATE/OpenNLP build.
 * Add support for automatically-propagated RelEx version number.
